@@ -1,11 +1,10 @@
 package clinica.medtech.appointments.service.impl;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import clinica.medtech.appointments.dto.request.CancelAppointmentDto;
 import clinica.medtech.appointments.dto.request.ConfirmAppointmentDto;
 import clinica.medtech.appointments.dto.request.CreateAppointmentDto;
@@ -20,8 +19,8 @@ import clinica.medtech.appointments.exception.AppointmentNotFoundException;
 import clinica.medtech.appointments.mapper.AppointmentMapper;
 import clinica.medtech.appointments.repository.AppointmentRepository;
 import clinica.medtech.appointments.service.AppointmentService;
-
 import lombok.RequiredArgsConstructor;
+
 
 @Service
 @RequiredArgsConstructor
@@ -29,20 +28,34 @@ public class AppointmentServiceImpl implements AppointmentService{
     private final AppointmentRepository appointmentRepository;
     private final AppointmentMapper appointmentMapper;
 
-    private final List<AppointmentStatus> CONFLICTING_STATUSES = List.of(AppointmentStatus.PENDING, AppointmentStatus.CONFIRMED);
+    // estados que generan bloqueo/solapamiento
+    private static final List<AppointmentStatus> CONFLICTING_STATUSES =
+            List.of(AppointmentStatus.PENDING, AppointmentStatus.CONFIRMED, AppointmentStatus.IN_PROGRESS);
 
     @Override
     @Transactional
     public AppointmentResponseDto createAppointment(CreateAppointmentDto dto) {
-        // check basic conflicts (same datetime)
-        boolean conflict = appointmentRepository.existsByDoctorIdAndAppointmentDateTimeAndStatusIn(
-                dto.getDoctorId(), dto.getAppointmentDateTime(), CONFLICTING_STATUSES);
-        if (conflict) {
-            throw new AppointmentConflictException("El médico ya tiene una cita en esa fecha/hora");
+        Appointment entity = appointmentMapper.toEntity(dto);
+
+        if (entity.getDuration() == null) {
+            entity.setDuration(30);
         }
 
-        Appointment entity = appointmentMapper.toEntity(dto);
         entity.setStatus(AppointmentStatus.PENDING);
+
+        // calcular endDateTime
+        entity.setEndDateTime(entity.getAppointmentDateTime().plusMinutes(entity.getDuration()));
+
+        boolean conflict = appointmentRepository.existsOverlapByDoctorAndTime(
+                entity.getDoctorId(),
+                entity.getAppointmentDateTime(),
+                entity.getEndDateTime(),
+                CONFLICTING_STATUSES
+        );
+        if (conflict) {
+            throw new AppointmentConflictException("Conflicto de horario con otra cita.");
+        }
+
         Appointment saved = appointmentRepository.save(entity);
         return appointmentMapper.toResponseDTO(saved);
     }
@@ -50,67 +63,92 @@ public class AppointmentServiceImpl implements AppointmentService{
     @Override
     @Transactional(readOnly = true)
     public AppointmentDetailDto getAppointmentById(Long id) {
-        Appointment a = appointmentRepository.findById(id)
-                .orElseThrow(() -> new AppointmentNotFoundException("Cita con id " + id + " no encontrada"));
-        return appointmentMapper.toDetail(a);
+        Appointment existing = appointmentRepository.findById(id)
+                .orElseThrow(() -> new AppointmentNotFoundException("Cita no encontrada"));
+        return appointmentMapper.toDetail(existing);
     }
 
     @Override
     @Transactional
     public AppointmentResponseDto updateAppointment(UpdateAppointmentDto dto) {
-        Appointment a = appointmentRepository.findById(dto.getId())
-                .orElseThrow(() -> new AppointmentNotFoundException("Cita con id " + dto.getId() + " no encontrada"));
-        appointmentMapper.updateFromDto(dto, a);
-        Appointment saved = appointmentRepository.save(a);
+        Appointment existing = appointmentRepository.findById(dto.getId())
+                .orElseThrow(() -> new AppointmentNotFoundException("Cita no encontrada"));
+
+        appointmentMapper.updateFromDto(dto, existing);
+
+        if (existing.getDuration() == null) {
+            existing.setDuration(30);
+        }
+
+        LocalDateTime newStart = existing.getAppointmentDateTime();
+        Integer newDuration = existing.getDuration();
+        LocalDateTime newEnd = newStart.plusMinutes(newDuration);
+        existing.setEndDateTime(newEnd);
+
+        boolean conflict = appointmentRepository.existsOverlapByDoctorAndTimeExcludingId(
+                existing.getDoctorId(),
+                newStart,
+                newEnd,
+                CONFLICTING_STATUSES,
+                existing.getId()
+        );
+        if (conflict) {
+            throw new AppointmentConflictException("Actualización genera conflicto con otra cita.");
+        }
+
+        Appointment saved = appointmentRepository.save(existing);
         return appointmentMapper.toResponseDTO(saved);
     }
 
     @Override
     @Transactional
     public void confirmAppointment(ConfirmAppointmentDto dto) {
-        Appointment a = appointmentRepository.findById(dto.getAppointmentId())
-                .orElseThrow(() -> new AppointmentNotFoundException("Cita con id " + dto.getAppointmentId() + " no encontrada"));
+        Appointment existing = appointmentRepository.findById(dto.getAppointmentId())
+                .orElseThrow(() -> new AppointmentNotFoundException("Cita no encontrada"));
 
-        // check conflict before confirming
-        boolean conflict = appointmentRepository.existsByDoctorIdAndAppointmentDateTimeAndStatusIn(
-                a.getDoctorId(), a.getAppointmentDateTime(), CONFLICTING_STATUSES);
-        // if a itself is in DB with PENDING this will be true; only consider conflict if another appointment exists
+        // comprobar solapamientos con otras citas antes de confirmar
+        boolean conflict = appointmentRepository.existsOverlapByDoctorAndTimeExcludingId(
+                existing.getDoctorId(),
+                existing.getAppointmentDateTime(),
+                existing.getEndDateTime(),
+                CONFLICTING_STATUSES,
+                existing.getId()
+        );
         if (conflict) {
-            // attempt to find an appointment at same date/time other than this one
-            Optional<Appointment> other = appointmentRepository.findByDoctorIdAndAppointmentDateTimeBetween(
-                    a.getDoctorId(), a.getAppointmentDateTime().minusSeconds(1), a.getAppointmentDateTime().plusSeconds(1))
-                    .stream()
-                    .filter(ap -> !ap.getId().equals(a.getId()))
-                    .findAny();
-            if (other.isPresent()) {
-                throw new AppointmentConflictException("No se puede confirmar: existe otra cita en la misma fecha/hora");
-            }
+            throw new AppointmentConflictException("No es posible confirmar: existe conflicto con otra cita.");
         }
 
-        a.setStatus(AppointmentStatus.CONFIRMED);
-        appointmentRepository.save(a);
+        existing.setStatus(AppointmentStatus.CONFIRMED);
+        if (dto.getConfirmationNotes() != null) {
+            existing.setNotes(dto.getConfirmationNotes());
+        }
+        appointmentRepository.save(existing);
     }
 
     @Override
     @Transactional
     public void cancelAppointment(CancelAppointmentDto dto) {
-        Appointment a = appointmentRepository.findById(dto.getAppointmentId())
-                .orElseThrow(() -> new AppointmentNotFoundException("Cita con id " + dto.getAppointmentId() + " no encontrada"));
-        a.setStatus(AppointmentStatus.CANCELLED);
-        appointmentRepository.save(a);
+        Appointment existing = appointmentRepository.findById(dto.getAppointmentId())
+                .orElseThrow(() -> new AppointmentNotFoundException("Cita no encontrada"));
+
+        existing.setStatus(AppointmentStatus.CANCELLED);
+        if (dto.getReason() != null) {
+            existing.setReason(dto.getReason());
+        }
+        appointmentRepository.save(existing);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<AppointmentSummaryDto> listByPatient(Long patientId) {
-        return appointmentRepository.findByPatientIdOrderByAppointmentDateTimeDesc(patientId)
-                .stream().map(appointmentMapper::toSummary).toList();
+        List<Appointment> list = appointmentRepository.findByPatientIdOrderByAppointmentDateTimeDesc(patientId);
+        return list.stream().map(appointmentMapper::toSummary).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<AppointmentSummaryDto> listByDoctor(Long doctorId) {
-        return appointmentRepository.findByDoctorIdOrderByAppointmentDateTimeAsc(doctorId)
-                .stream().map(appointmentMapper::toSummary).toList();
+        List<Appointment> list = appointmentRepository.findByDoctorIdOrderByAppointmentDateTimeAsc(doctorId);
+        return list.stream().map(appointmentMapper::toSummary).collect(Collectors.toList());
     }
 }
